# substrate-node

node/src/: chain_spec.rs
pallets/custom_assets/: Cargo.toml  cargo.toml
pallets/custom_assets/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
